# nevis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
evals/chunk_search/: engine_adapter.py  run_evals.py
evals/chunk_search/data/: synthetic_wealth_data.json
src/app/: config.py  containers.py  logging.py  main.py
src/app/api/: dependencies.py  mappers.py
src/app/api/v1/: clients.py  documents.py  search.py
src/app/core/domain/: models.py
src/app/core/services/: chunking.py  chunks_search_service.py  client_search_service.py  rrf.py  (+8 more)
src/app/domain/: models.py
src/app/infrastructure/: chunks_search_repository.py  client_repository.py  client_search_repository.py  document_chunk_repository.py  document_repository.py  document_search_repository.py
src/app/services/: client_service.py
src/client/: __init__.py  nevis_client.py  schemas.py
src/eval/: __init__.py  __main__.py  cli.py  data_setup.py  metrics.py  reporter.py  runner.py  schema.py
src/shared/: exceptions.py  time_utils.py
src/shared/blob_storage/: __init__.py  s3_blober.py
src/shared/database/: base_mapper.py  base_repo.py  database.py  database_settings.py  entity_mapper.py  unit_of_work.py
tests/: conftest.py
tests/app/: test_client_api.py
tests/app/api/: test_documents_api.py  test_search_api.py
tests/app/infrastructure/: test_chunks_search_repository.py  test_client_repository.py  test_client_search_repository.py  test_document_repository.py  test_document_search_repository.py
tests/e2e_eval/: conftest.py  data_setup.py  evaluation.py  evaluation_runner.py  run_eval.py  schema.py  test_wealth_manager_eval.py
tests/e2e_eval/data/: synthetic_wealth_data.json  synthetic_wealth_data_large.json
tests/integration/: __init__.py  conftest.py  test_client_search_integration.py  test_document_search_integration.py  test_document_upload.py
tests/shared/blob_storage/: test_s3_blober.py
tests/shared/database/: mock_entities.py  mock_repository.py  test_database_integration.py
(+19 files in other folders)
