[project]
name = "nevis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.9",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "langchain-text-splitters>=1.1.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "testcontainers[localstack]>=4.13.3",
    "types-boto3>=1.42.9",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.13.3",
]
