[project]
name = "nevis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.9",
    "dependency-injector>=4.45.0",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "google-generativeai>=0.8.0",
    "langchain-text-splitters>=1.1.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=3.3.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "types-boto3>=1.42.9",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers>=4.13.3",
    "testcontainers[localstack]>=4.13.3",
    "ranx>=0.3.0",
]
